--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
+    "barcode-react-scanner": "^1.2.0",
     "react": "^17.0.1",
+    "react-barcode-reader": "0.0.2",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.13.1",
+    "react-qr-scanner": "0.0.11",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-webcam": "^5.2.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
