--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
     "barcode-react-scanner": "^1.2.0",
+    "leaflet": "^1.7.1",
     "quagga": "^0.12.1",
     "react": "^17.0.1",
     "react-barcode-reader": "0.0.2",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.13.1",
+    "react-leaflet": "^3.0.5",
+    "react-popup": "^0.10.0",
     "react-qr-scanner": "0.0.11",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
